@@ -1,3 +1,7 @@
+2007-09-11  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Added searching for rootpage_id by domain name (taking redirects into account)
+
 2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
